--- a/styles/ContentModal.module.scss
+++ b/styles/ContentModal.module.scss
@@ -6,9 +6,16 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding: 10px 30px;
+    padding: 80px 40px;
     position: relative;
     background-color: white;
+    h2 {
+        margin: 0px;
+        font-weight: 300;
+    }
+    input {
+        padding: 0px 20px;
+    }
 
     .items {
         display: flex;
@@ -16,19 +23,36 @@
         align-items: center;
         gap: 10px;
         align-items: center;
-        height: 400px;
+        height: 70px;
         width: 750px;
     }
-    .time {
+    .hours {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 6px;
+    }
+    .timeStart {
         border: none;
         background-color: #ece8e8d6;
-        width: 80px;
+        width: 120px;
+        height: 40px;
+        outline: none;
+        color: #928d8d;
+        border-radius: 6px;
+    }
+    .timeEnd {
+        margin: 18px;
+        border: none;
+        background-color: #ece8e8d6;
+        width: 120px;
         height: 40px;
         outline: none;
         color: #928d8d;
         border-radius: 6px;
     }
     .title {
+        margin-left: 50px;
         border: none;
         background-color: #ece8e8d6;
         width: calc(100% - 36px);
@@ -49,6 +73,8 @@
         border-radius: 6px;
     }
     .date {
+        margin-left: 60px;
+
         border: none;
         background-color: #ece8e8d6;
         width: 170px;
@@ -56,14 +82,44 @@
         outline: none;
         color: #928d8d;
         font-size: 18px;
-        border-radius: 12px;
+        border-radius: 6px;
+    }
+    .local {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        span {
+            padding: 0px 20px;
+            font-weight: 400;
+            font-size: 20px;
+        }
     }
     button {
+        height: 30px;
+        width: 30px;
         position: absolute;
         right: 33px;
         top: 20px;
+        background-color: transparent;
         border: none;
         outline: none;
-        color: black;
+
+        .xImg {
+            color: black;
+            background-color: transparent;
+        }
+    }
+
+    .save {
+        position: absolute;
+        width: 144px;
+        height: 38px;
+        background-color: #4ca7a8;
+        border-radius: 6px;
+        border: none;
+        color: white;
+        left: 330px;
+        top: 439px;
     }
 }
