--- a/styles/MainContent.module.scss
+++ b/styles/MainContent.module.scss
@@ -14,12 +14,7 @@
         width: 300px;
         height: 30px;
     }
-    .events {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        width: 316px;
-    }
+
     .schedule {
         width: 100%;
         height: 680px;
@@ -28,6 +23,7 @@
     .allEvents {
         height: 334px;
         overflow: auto;
+        overflow-x: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
